--- a/plantilla/src/App.css
+++ b/plantilla/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: aqua;
 }
 
 .App-logo {
@@ -7,14 +8,10 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0247d16c;
   min-height: 100px;
   display: flex;
   flex-direction: column;
@@ -28,11 +25,12 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.App-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #7057ff;
+  text-align: center;
+  padding: 10px;
 }
